# flinderax

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  PERFORMANCE_REPORT.md  README_LOAD_TEST.md  build.rs  flinderax.db  fly.toml  load-test.js  package-lock.json  readme.md  tasks.md
.sqlx/: query-08a10d598abe11a6762d56cd8a9a668a16e3615a80df85d1ffea12647c65e33f.json  query-148c46c66d4e45ca62e1decaa1732c1ab53fb4633584dd6502c116a4ac404b2d.json  query-23e96bb59ba472f123f00bdc96f58ec663bb378fd57159df7a52eeceaa5cea14.json  query-2b5ff9301028686aa50a76b76d55a3af51499616bf73b1f566a4316cbc6b5b08.json  query-434b884abe82329eb7d2c8c36f647e5b70ae3c6624727591c335b0c7b6cd7a6f.json  query-54050809c35d653d4706665609db3b743dd81f22851045ce62b10d42549ab0b6.json  query-54ecb200b0256a388428d758ce312d017dfdb2c4ade4c8b24c6a696964ec15cb.json  query-54f225533391229769b55454ff6562b97162cc4e84485fe0881261763ad1d47a.json  query-7e9ab05c719af53d1feb7f03e9090892f870664687240210e9f4336692599b09.json  query-a8f756f8eba9e1729a6af300ae795f72089cffba5ad84b0f91a4fae4902b31e5.json  query-b73c4772a89d35a92620049653a36ac948ef519b5d7137e138a8b270d3e773fd.json  query-cdbbfdf9c494debdab0180162e2316afe84f76a1a4b062557e977c8f5508ffa8.json  query-feb324748de3d3e753eebcb461d67b206158172877af244630ae98e63f5e686f.json
migrations/: 20260121124922_init.sql  20260124141121_alter_card_table_to_have_2_colors_secondary_and_primary.sql  20260124145245_alter_color_column_type.sql  20260125143636_update_amount_to_float.sql  20260207190227_add_timestamp_index.sql
src/: app.rs  main.rs  models.rs
web/: Dockerfile  bundle-analysis.html  fly.toml  get_all_cards.lua  index.html  package-lock.json  package.json  postcss.config.js  stress_test.sh  vite-profile-0.cpuprofile  vite.config.ts
(+32 files in other folders)
