[package]
name = "flinderax"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
bacon = "3.22.0"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite"] }
sqlx-cli = "0.8.6"
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.19.0"
