[package]
name = "flinderax"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
bacon = "3.22.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
nanoid = "0.4.0"
rusty_paseto = { version = "0.9.0", features = ["batteries_included"] }
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
sqlx-cli = "0.8.6"
redis = { version = "0.29.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = {version="0.3.22", features=["env-filter", "json"]}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
